kubernetes/apps/observability/victoria-logs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victorialogs
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "logs.matherly.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-logs-server
          port: 9428
